# gitz

./: .gitignore  CMakeLists.txt  LICENSE  install.sh
include/: commands.h  commit.h  index.h  object_utils.h  repository.h  tree.h
src/: blob.cpp  blob.h  commands.cpp  commands.h  commit.cpp  commit.h  index.cpp  index.h  main.cpp  object.h  object_utils.cpp  repository.cpp  repository.h  tree.cpp
